<resources>
    <string name="app_name">Alphabet Book</string>
    <string name="a">A</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="z">Z</string>
    <string name="y">Y</string>
    <string name="w">W</string>
    <string name="u">U</string>
    <string name="s">S</string>
    <string name="r">R</string>
    <string name="p">P</string>
</resources>
